force-app/main/default/objects/Lab_Test_Bundle__c/Lab_Test_Bundle__c.object-meta.xml
<CustomObject>
    <label>Lab Test Bundle</label>
    <nameField>
        <label>Lab Test Bundle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lab Test Bundles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>