force-app/main/default/objects/Lab_Test_Bundle__c/fields/Associate_Procedure_Code__c.field-meta.xml
<CustomField>
    <fullName>Associate_Procedure_Code__c</fullName>
    <label>Associated Procedure Code</label>
    <length>35000</length>
    <type>LongTextArea</type>
</CustomField>