force-app/main/default/objects/Lab_Test_Bundle__c/fields/Associated_Diagnosis_Codes__c.field-meta.xml
<CustomField>
    <fullName>Associated_Diagnosis_Codes__c</fullName>
    <label>Associated Diagnosis Codes</label>
    <length>35000</length>
    <type>LongTextArea</type>
</CustomField>