force-app/main/default/objects/Lab_Test_Bundle__c/fields/Attribute_Codes__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Codes__c</fullName>
    <label>Attribute Codes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>