force-app/main/default/objects/Lab_Test_Bundle__c/fields/Attribute_Type__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Type__c</fullName>
    <label>Attribute Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diagnosis Code</fullName>
            </value>
            <value>
                <fullName>Procedure Code</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>LOC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>