force-app/main/default/objects/Lab_Test_Bundle__c/fields/Attribute_Type_Records__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Type_Records__c</fullName>
    <label>Attribute Type Records</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>