force-app/main/default/objects/Lab_Test_Bundle__c/fields/DescriptionField__c.field-meta.xml
<CustomField>
    <fullName>DescriptionField__c</fullName>
    <label>Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>