force-app/main/default/objects/Lab_Test_Bundle__c/fields/Diagnosis_Codes_SF_Ids__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Codes_SF_Ids__c</fullName>
    <label>Diagnosis Codes SF Ids</label>
    <length>35000</length>
    <type>LongTextArea</type>
</CustomField>