force-app/main/default/objects/Lab_Test_Bundle__c/fields/Lab__c.field-meta.xml
<CustomField>
    <fullName>Lab__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lab</label>
    <referenceTo>Lab__c</referenceTo>
    <relationshipLabel>Lab Test Bundles</relationshipLabel>
    <relationshipName>Lab_Test_Bundles</relationshipName>
    <type>Lookup</type>
</CustomField>