force-app/main/default/objects/Lab_Test_Bundle__c/fields/Lab_Test_Records__c.field-meta.xml
<CustomField>
    <fullName>Lab_Test_Records__c</fullName>
    <label>Lab Test Records</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>