force-app/main/default/objects/Lab_Test_Bundle__c/fields/Lab_Tests_SF_Ids__c.field-meta.xml
<CustomField>
    <fullName>Lab_Tests_SF_Ids__c</fullName>
    <label>Lab Tests SF Ids</label>
    <length>35000</length>
    <type>LongTextArea</type>
</CustomField>